--- a/ajax_GET_3_methodes/index.html
+++ b/ajax_GET_3_methodes/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Ajax GET 3 méthode</h1>
+        <h1>Ajax GET 3 méthodes</h1>
     </header>
     <main>
         <p>API utilisée: <a href="https://jsonplaceholder.typicode.com/">Lien API jsonplaceholder</a></p>
