--- a/jquery_liste_course/index.html
+++ b/jquery_liste_course/index.html
@@ -12,8 +12,8 @@
     <h1>jQuery &ndash; Liste de courses</h1>
 
     <input type="text" name='element'>
-    <div>
-        <ul id="liste"></ul>
+    <div id="liste">
+        <ul></ul>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
