--- a/ballon_gonflable/index.html
+++ b/ballon_gonflable/index.html
@@ -6,7 +6,7 @@
     <title>Ballon gonflable</title>
 </head>
 <body>
-    <script src="ballon.js"></script>
-    <script src="main.js"></script>
+    <script src="script/ballon.js"></script>
+    <script src="script/main.js"></script>
 </body>
 </html>
