--- a/devoir_04/user_board_storage/index.html
+++ b/devoir_04/user_board_storage/index.html
@@ -103,7 +103,7 @@
       });
     });
   </script>
-  <!-- <script src="script/App.js" defer></script> -->
+  <script src="script/App.js" defer></script>
 </head>
 <body>
   <div id="wrapper">
