--- a/devoir_04/user_board_storage/index.html
+++ b/devoir_04/user_board_storage/index.html
@@ -42,8 +42,10 @@
     }
 
     /* Sliders */
-    #eq > span {
-      height:120px; float:left; margin:15px
+    #eq>span {
+      height: 120px;
+      float: left;
+      margin: 15px
     }
 
     #tesWidgets {
@@ -105,6 +107,7 @@
   </script>
   <script src="script/App.js" defer></script>
 </head>
+
 <body>
   <div id="wrapper">
     <section>
@@ -186,7 +189,6 @@
     </section>
     <section id="tesWidgets">Ton(Tes) propre(s) élément(s) ici</section>
   </div>
-
 
 </body>
 
